# nk_ros_pkgs

./: .gitignore  .gitmodules  README.md  install-ros.bash
cubert_description/: CMakeLists.txt  package.xml
cubert_description/launch/: main.launch.py
cubert_description/urdf/: cubert_1.urdf  cubert_2.urdf
frc_2023_field_description/: CMakeLists.txt  package.xml
frc_2023_field_description/launch/: main.launch.py
frc_2023_field_description/urdf/: 2023_field.urdf
frc_2024_field_description/: CMakeLists.txt  package.xml
frc_2024_field_description/launch/: main.launch.py
frc_2024_field_description/urdf/: 2024_field.urdf
install/: local_setup.sh  setup.sh
install/aruco_opencv_msgs/share/aruco_opencv_msgs/: package.bash  package.zsh
log/: latest_build
nk_vision_pkg/: CMakeLists.txt  package.xml
nk_vision_pkg/config/: 2024_aruco_layout.yaml  arducam.yaml  aruco_tracker_1.yaml  aruco_tracker_2.yaml  board_descriptions.yaml  config_file.rviz  frc_defined_aruco_layout.yaml  microsoft_lifecam_calibration.yaml
nk_vision_pkg/launch/: aruco_tracker_1.launch.xml  aruco_tracker_2.launch.xml  calibrate_camera.launch.py  nk_vision.launch.py
nk_vision_pkg/nk_vision/: network_table2tf.py  pose_estimation.py  tf2network_table.py
nk_vision_pkg/scripts/: convert_orientation.py  startup.sh
robot_2024_description/: CMakeLists.txt  package.xml
robot_2024_description/launch/: main.launch.py
robot_2024_description/meshes/: arm_link.stl  base_link.stl
robot_2024_description/urdf/: camera_1.urdf  camera_2.urdf  robot_2024.urdf
